--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Mon Beau jeu de Dés</h1>
     </section>
 
-    <article class="device">
+    <article class="device active0">
         <section class="new game">
             <button type="button" id="new-game">Nouveau Jeu</button>
         </section>
@@ -36,6 +36,16 @@
             <div class="dé">0</div>
             <button type="button" id="launch" class="disable" disabled>Lancer les dés</button>
             <button type="button" id="save" class="disable" disabled>Enregistrer</button>
+        </section>
+
+        <section id="dice" class="dice6">
+            <div class="oneD"></div>
+            <div class="twoD"></div>
+            <div class="threeD"></div>
+            <div class="fourD"></div>
+            <div class="fiveD"></div>
+            <div class="sixD"></div>
+            <div class="sevenD"></div>
         </section>
     </article>
     
